--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hardhat": "^2.22.12"
   },
   "dependencies": {
-    "ethers": "^6.13.2"
+    "ethers": "^6.13.2",
+    "web3": "^4.13.0"
   }
 }
